--- a/views/login.html
+++ b/views/login.html
@@ -45,7 +45,7 @@
         <input type="text" name="Usuario" placeholder="Nombre de usuario">
         <input type="password" name="Password" placeholder="Ingresa tu contraseña">
         <div class="box-buttom">
-        <button type="submit">Ingresar</button>
+        <button type="submit" class="button-login">Ingresar</button>
     </div>
  </form>
 </main>
