cambie un button en register para que me reenvie al home

--- a/views/register.html
+++ b/views/register.html
@@ -79,7 +79,7 @@
     <input type="password" name="contraseña" placeholder="Confirme su contraseña" class="Text-input" required>
     <div class="Button-flex"> 
     <button type="reset">Borrar</button>
-    <button type="submit" onclick="location.href='/home'">Enviar</button>
+    <button type="submit" onclick="location.href='/'">Enviar</button>
     </div>
 </form>
 
