--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,9 @@
   <header class="main-header">
     <div class="main-header-top-bar">
         <img src="/img/logo-mercado-liebre.svg" class="logo">
+        <form action="" class="form-search">
         <input type="search" placeholder="Buscar producto" class="buscador-header">
+        </form>
         <h2 class="copy-header">
         
             <i class="fa-solid fa-hand-holding-dollar"></i>
